--- a/flight-gear-gps/res/layout/gps_layout.xml
+++ b/flight-gear-gps/res/layout/gps_layout.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" 
-    android:keepScreenOn="true" >
+    android:keepScreenOn="true"
+    android:orientation="vertical" >
 
     <com.google.android.maps.MapView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/mapview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1.66"
         android:apiKey="046m-_AK777xqAQsZ31JotIVZ9En7OmgSmADlqQ"
         android:clickable="true" />
 
