--- a/flight-gear-gps/res/menu/menu.xml
+++ b/flight-gear-gps/res/menu/menu.xml
@@ -2,9 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/preferences"
+        android:id="@+id/menu_preferences"
         android:icon="@drawable/preferences"
         android:title="Preferences"
+        />
+    
+    <item
+        android:id="@+id/menu_search"
+        android:icon="@drawable/search"
+        android:title="Search"
         />
 
 </menu>
