--- a/flight-gear-gps/res/layout/gps_layout.xml
+++ b/flight-gear-gps/res/layout/gps_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:keepScreenOn="true"
@@ -9,9 +9,77 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/mapview"
         android:layout_width="fill_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1.66"
+        android:layout_height="fill_parent"
         android:apiKey="046m-_AK777xqAQsZ31JotIVZ9En7OmgSmADlqQ"
         android:clickable="true" />
 
-</LinearLayout>
+     <RelativeLayout
+        android:id="@+id/infoBoxTop"
+        style="@style/TextBox"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:orientation="vertical" 
+        android:visibility="invisible"/>
+    
+    <RelativeLayout
+        android:id="@+id/infoBoxBottom"
+        style="@style/TextBox"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:id="@+id/groundSpeedBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/labelGS"
+                style="@style/TextWithShadow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GS" />
+
+            <TextView
+                android:id="@+id/groundspeedKt"
+                style="@style/TextWithShadow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="000 kt" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/altitudeBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:gravity="right"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/labelAlt"
+                style="@style/TextWithShadow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="alt" />
+
+            <TextView
+                android:id="@+id/altitudeFt"
+                style="@style/TextWithShadow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00000 ft" />
+        </LinearLayout>
+    </RelativeLayout>
+
+</RelativeLayout>
