--- a/flight-gear-gps/res/layout/gps_layout.xml
+++ b/flight-gear-gps/res/layout/gps_layout.xml
@@ -11,17 +11,27 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
-     <RelativeLayout
+<!--     <RelativeLayout
         android:id="@+id/infoBoxTop"
         style="@style/TextBox"
         android:layout_width="fill_parent"
         android:layout_height="60dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:orientation="vertical" 
-        android:visibility="invisible"/>
+        android:layout_alignParentTop="true"
+        android:orientation="vertical"
+        android:visibility="invisible" >
+    </RelativeLayout> -->
     
+ 	<ImageButton
+            android:id="@+id/buttonLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true" 
+            
+            android:src="@drawable/ic_location"  android:layout_marginTop="10sp" android:layout_marginRight="10sp"/>
+ 	
     <RelativeLayout
         android:id="@+id/infoBoxBottom"
         style="@style/TextBox"
