--- a/flight-gear-gps/res/menu/menu.xml
+++ b/flight-gear-gps/res/menu/menu.xml
@@ -9,7 +9,7 @@
     
     <item
         android:id="@+id/menu_search"
-        android:icon="@drawable/search"
+        android:icon="@drawable/ic_search"
         android:title="Search"
         />
 
