--- a/flight-gear-gps/res/layout/waypoint_lists_item.xml
+++ b/flight-gear-gps/res/layout/waypoint_lists_item.xml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:keepScreenOn="true"
-    android:orientation="vertical" >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingBottom="10dp"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp" >
 
     <TextView
-        android:id="@+id/textWaypoint"
-        android:layout_width="wrap_content"
+        android:id="@+id/textWaypointIdent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="WAYPOINT"
         android:focusableInTouchMode="true"
+        android:text="IDNT"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/textWaypointName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusableInTouchMode="true"
+        android:text="Waypoint Name"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/textWaypointDistance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusableInTouchMode="true"
+        android:text="00 NM"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
